# langchain-integration-for-sap-hana-cloud

./: Makefile  README.md  REUSE.toml  pyproject.toml
.github/scripts/: check_prerelease_dependencies.py  get_min_versions.py
.github/workflows/: ci.yml  release.yml
.reuse/: dep5
docs/: setup_guide.md
langchain_hana/: __init__.py  vectorstores.py
langchain_hana/chains/: __init__.py
langchain_hana/chains/graph_qa/: __init__.py  prompts.py  sparql_qa_chain.py
langchain_hana/graphs/: __init__.py  hana_rdf_graph.py
langchain_sap_hana_cloud/: __init__.py  embeddings.py  query_constructors.py  vectorstores.py
tests/integration_tests/: hana_test_utils.py  test_vectorstores.py  test_vectorstores_internal_embedding.py
tests/unit_tests/: test_query_constructors.py  test_vectorstores.py
